# hione

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
crates/hi-cli/: Cargo.toml
crates/hi-cli/src/: main.rs
crates/hi-cli/src/commands/: check.rs  common.rs  esc.rs  mod.rs  pull.rs  push.rs  result.rs  start.rs
crates/hi-cli/src/templates/: context_template.md
crates/hi-cli/tests/: check_test.rs  common_test.rs  esc_test.rs  pull_test.rs  push_test.rs  result_test.rs  start_test.rs
crates/hi-core/: Cargo.toml
crates/hi-core/src/: db.rs  error.rs  history.rs  ipc.rs  lib.rs  message.rs  protocol.rs  session.rs
crates/hi-core/tests/: db_test.rs  error_test.rs  history_test.rs  integration_test.rs  ipc_test.rs  message_test.rs  protocol_test.rs  session_test.rs
crates/hi-monitor/: Cargo.toml
crates/hi-monitor/src/: detector.rs  lib.rs  main.rs  server.rs  snapshot.rs  task_queue.rs  tmux.rs
crates/hi-monitor/tests/: detector_test.rs  server_integration.rs  snapshot_test.rs  task_queue_test.rs  tmux_test.rs
crates/hi-tauri/: index.html  package-lock.json  package.json  vite.config.ts
crates/hi-tauri/src/: App.tsx  index.css
crates/hi-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
crates/hi-tauri/src-tauri/capabilities/: default.json
crates/hi-tauri/src-tauri/icons/: icon.icns
crates/hi-tauri/src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
crates/hi-tauri/src-tauri/src/commands/: agent.rs  custom_tools.rs  mcp.rs  mod.rs  session.rs  settings.rs  setup.rs  skill.rs  task.rs  tools.rs
crates/hi-tauri/src-tauri/src/db/: mod.rs  schema.rs
crates/hi-tauri/src-tauri/src/services/: agent_config.rs  custom_tools.rs  ipc_client.rs  mcp_config.rs  mod.rs  notify.rs  session.rs  skill_manager.rs  tool_manager.rs
crates/hi-tauri/src-tauri/tests/: error_test.rs  types_test.rs
crates/hi-tauri/src/components/: AgentIcon.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx  StatusIcon.tsx
crates/hi-tauri/src/config/: menu.ts
crates/hi-tauri/src/i18n/: index.ts
crates/hi-tauri/src/i18n/locales/: en.json  zh-CN.json
crates/hi-tauri/src/lib/: store.ts  tauri.ts
crates/hi-tauri/src/pages/: AboutPage.tsx  AgentConfigPage.tsx  CustomToolsPage.tsx  HelpPage.tsx  LauncherPage.tsx  McpPage.tsx  SettingsPage.tsx  SkillsPage.tsx  TaskPanelPage.tsx  ToolManagerPage.tsx
crates/hi-tauri/src/types/: index.ts
scripts/: coverage.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
