[workspace]
resolver = "2"
members = [
    "crates/hi-core",
    "crates/hi-cli",
    "crates/hi-monitor",
    "crates/hi-tauri/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
sqlx         = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4", features = ["derive"] }
which        = "6"
portable-pty = "0.8"
tempfile     = "3"
toml         = "0.8"
