[package]
name    = "hi-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "hi_cli"
path = "src/lib.rs"

[[bin]]
name = "hi"
path = "src/main.rs"

[dependencies]
hi-core    = { path = "../hi-core" }
serde      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
which      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sqlx       = { workspace = true }
tempfile   = { workspace = true }
toml       = { workspace = true }

[dev-dependencies]
