[package]
name    = "hi-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sqlx       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
