[package]
name    = "hi-monitor"
version.workspace = true
edition.workspace = true

[lib]
name = "hi_monitor"
path = "src/lib.rs"

[[bin]]
name = "hi-monitor"
path = "src/main.rs"

[dependencies]
hi-core    = { path = "../hi-core" }
tokio      = { workspace = true }
serde_json = { workspace = true }
sqlx       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
clap       = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
tempfile   = { workspace = true }

[dev-dependencies]
