[package]
name    = "hi-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "hi_tauri_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hi-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hi-core       = { path = "../../hi-core" }
tauri         = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-notification = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
thiserror     = "2"
sqlx          = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
uuid          = { version = "1", features = ["v4"] }
chrono        = "0.4"
which         = "6"
anyhow        = "1"
reqwest       = { version = "0.12", features = ["json"] }
toml          = "0.8"
